<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:id="@+id/item">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/image"
            android:src="@drawable/place_holder"
            android:layout_weight=".30"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight=".60">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:text="@string/name"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginEnd="5dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/language"
                android:text="@string/language"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginEnd="5dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/genere"
                android:text="@string/genere"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginEnd="5dp"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/clear"
            android:src="@drawable/clear"
            android:layout_weight=".10"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>